# Lets_Talk

./: Procfile  db.sqlite3  pyproject.toml
base/: forms.py  urls.py  views.py
base/api/: views.py
base/migrations/: 0001_initial.py  0002_user_bio_user_name_alter_user_email.py
base/templates/base/: activity_component.html  home.html  login_register.html  login_register_old.html  profile.html  room.html  room_form.html  topics.html  topics_component.html  update-user.html
let's_talk/: pyproject.toml
letstalk/: Procfile  db.sqlite3  requirements.txt  urls.py  wsgi.py
letstalk/base/: admin.py  models.py  urls.py  views.py
letstalk/base/migrations/: 0001_initial.py  0002_topic_room_host_message_room_topic.py  0003_alter_room_options.py  0003_user_avatar.py  0004_alter_room_created_alter_room_updated.py  0005_alter_room_created_alter_room_updated.py  0006_alter_room_created_alter_room_updated.py  0007_alter_room_created_alter_room_updated.py  0008_alter_message_created_alter_message_updated.py  0009_room_participants.py
letstalk/base/templates/base/: activity.html  activity_component.html  delete.html  feed_component.html  home.html  login_register.html  room.html  update-user.html
letstalk/letstalk/: asgi.py  settings.py  urls.py
letstalk/templates/: home.html  main.html  navbar.html
templates/: navbar.html
