[tool.poetry]
name = "let's talk"
version = "0.1.0"
description = ""
authors = ["Konstantin  <hghghge8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
pillow = "^10.0.1"
gunicorn = "^21.2.0"
django-heroku = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
